# $Id: Makefile.am 22476 2019-09-12 06:41:56Z yeti-dn $

plugindocdir = $(docdir)/plugins

plugindocfiles = \
	LICENSE \
	README \
	plugin-helper.hh \
	dump.cc \
	dump.hh \
	dump.c \
	dump.sh \
	GwyddionDump.pas \
	invert_cpp.cc \
	invert_cpp.rgi \
	invert_narray.rb \
	invert_pascal.pas \
	invert_pascal.rgi \
	invert_perl.pl \
	invert_perl.pl.rgi \
	invert_python.py \
	invert_python.py.rgi \
	invert_ruby.rb \
	invert_ruby.rb.rgi \
	yellow.sh \
	yellow.sh.rgi

plugindoc_DATA = $(plugindocfiles)
EXTRA_DIST = $(plugindocfiles)
