# $Id: Makefile.am 20680 2017-12-18 18:29:14Z yeti-dn $

gradientdatadir = $(pkgdatadir)/gradients

gradientdata_DATA = \
	BW1 \
	BW2 \
	Blend1 \
	Blend2 \
	Blue \
	Blue-Cyan \
	Blue-Violet \
	Blue-Yellow \
	Body \
	Caribbean \
	Code-V \
	Cold \
	DFit \
	Digitalis \
	Gold \
	Gray-inverted \
	Green \
	Green-Cyan \
	Green-Stripes-4 \
	Green-Violet \
	Green-Yellow \
	Gwyddion.net \
	Halcyon \
	Lines \
	Maple \
	MetroPro \
	NT-MDT \
	Neon \
	Olive \
	Pink \
	Plum \
	Pm3d \
	Rainbow1 \
	Rainbow2 \
	Red \
	Red-Cyan \
	Red-Stripes-5 \
	Red-Violet \
	Red-Yellow \
	RGB-Red \
	RGB-Green \
	RGB-Blue \
	Rust \
	Saw1 \
	Shame \
	Sky \
	Sm2 \
	Spectral \
	Spectral-white \
	Spring \
	Viridis \
	Warm \
	Warpp-mono \
	Warpp-spectral \
	Wyko \
	Yellow \
	Zones

EXTRA_DIST = \
	$(gradientdata_DATA)

